@@ -5,6 +5,7 @@ dh-make-perl (0.65) UNRELEASED; urgency=low
   * in --make mode, rename any existing debian/ directory to debian.bak/,
     overwriting the later if it exists
   * when looking for docs, ignore .svn/ too
+  * do not crash when APT's package cache cannot be opened
 
  -- Damyan Ivanov <dmn@debian.org>  Fri, 19 Feb 2010 22:47:26 +0200
 
